--- a/spring-boot-3-rest-api-example-master/pom.xml
+++ b/spring-boot-3-rest-api-example-master/pom.xml
@@ -37,6 +37,38 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.5.14</version> <!-- 최신 버전 확인 후 변경 가능 -->
 		</dependency>
+		<!-- Apache POI 기본 라이브러리 -->
+    <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi</artifactId>
+        <version>5.2.3</version> <!-- 최신 버전 확인 후 변경 가능 -->
+    </dependency>
+    
+    <!-- Apache POI OOXML 라이브러리 (xlsx 파일 지원) -->
+    <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-ooxml</artifactId>
+        <version>5.2.3</version>
+    </dependency>
+
+    <!-- POI에서 XML 처리에 필요한 라이브러리 -->
+    <dependency>
+        <groupId>org.apache.xmlbeans</groupId>
+        <artifactId>xmlbeans</artifactId>
+        <version>5.1.1</version>
+    </dependency>
+
+    <!-- Logging (POI 내부에서 사용하는 로그 처리) -->
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>2.0.7</version>
+    </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-simple</artifactId>
+        <version>2.0.7</version>
+    </dependency>
 	</dependencies>
 
 	<build>
